# darya-genie

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  GEMINI.md  README.md  pyproject.toml
.kilo/plans/associated_work_effort/: reory_comment_issue_3.md
.kilo/plans/completed/: reory_comment_issue_3.md
.kilo/plans/completed/associated_work_effort/: reory_comment_issue_3.md
docs/: ANTI_GAMING_AND_MATERIAL_INTEGRITY_PROTOCOL.md  CURRICULUM.md  DRONE_PROTOCOLS.md  DRONE_UGV_COORDINATION_PROTOCOL.md  SECURITY_AND_ASSET_PROTECTION.md
docs/restoration/: gis_protocols.md
docs/safety/: assessment_quiz.md  mangrove_propagation.md  module_01_safety.md  module_02_equipment.md  module_03_environment.md
education/: README.md
firmware/motor_controller/: platformio.ini
scripts/: certification_gatekeeper.py
src/api/: __init__.py  auth.py  main.py  requirements.txt
src/genie_brain/: CMakeLists.txt  package.xml
src/genie_brain/detection/: tile_satellite_image.py
src/payment_gateway/: app.py
tests/: conftest.py  test_api.py
