<?xml version="1.0"?>
<?xml version="1.0"?>
<package format="2">
  <name>genie_brain</name>
  <version>0.0.1</version>
  <description>ROS 2 package for Darya Genie's brain: navigation, obstacle avoidance, computer vision</description>
  <maintainer email="user@todo.todo">User</maintainer>
  <license>TODO: License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>